--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.3",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.3",
