--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
+    "axios": "^1.7.9",
     "framer-motion": "^12.0.6",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
