--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.1.3",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar": "^3.1.0"
   },
