--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "framer-motion": "^12.0.6",
     "react": "^18.3.1",
@@ -21,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.3",
